--- a/css/main.css
+++ b/css/main.css
@@ -72,17 +72,36 @@ img {
   padding: 0;
 }
 
-
-
-
-.box {
-  background-color: #3b3a33;
-  padding: 1em;
+.banner {
   text-align: center;
 }
 
+.rocks {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.banner-title {
+  position: absolute;
+  top: 10em;
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.25em;
+  color: white;
+  padding: 40px;
+  margin: 0;
+}
+
+footer {
+  background-color: #512200;
+  opacity: .5;
+  width: 100%;
+  height: 2em;
+  display: block;
+}
+
 .btn {
-  display: inline-block;
+  display: inline;
   padding: 0.5em 0.75em;
   text-decoration: none;
   color: white;
