--- a/css/main.css
+++ b/css/main.css
@@ -103,8 +103,9 @@ footer {
   overflow: hidden;
 }
 
-.btn-ant {
+.btn {
   position: absolute;
+  overflow: hidden;
   padding: 0.5em 0.75em;
   text-decoration: none;
   color: white;
