--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ nav a:hover {
 
 img {
   width: 100%;
+  display: block;
 }
 
 .tile {
@@ -81,7 +82,6 @@ img {
   position: relative;
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(to bottom, transparent, black)
 }
 
 .banner-title {
@@ -92,15 +92,23 @@ img {
   color: white;
   padding: 40px;
   margin: 0;
+  background-image: linear-gradient(to bottom, transparent, black);
 }
 
 footer {
-  background-color: #512200;
-  opacity: .5;
+  background-color: rgba(81,34,0,0.5);
   width: 100%;
-  height: 2em;
-  position: relative;
   overflow: hidden;
+  position: relative;
+  background-image: url("../images/logo.svg");
+  background-size: 25px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-img {
+  width: 25px;
+  margin: 10px;
 }
 
 .ant {
@@ -122,13 +130,15 @@ footer {
 .btn-ant {
   position: absolute;
   top: 150px;
-  left: 40px;
+  left: 30px;
   padding: 0.5em 0.75em;
+  width: 100px;
+  text-align: center;
   text-decoration: none;
   color: white;
   font-family: 'Dosis', sans-serif;
   background-color: #6FC000;
-  border-radius: 10px;
+  border-radius: 15px;
   background-image: linear-gradient(to bottom, #6FC000, #388200)
 }
 
@@ -140,13 +150,15 @@ footer {
 .btn-stag {
   position: absolute;
   top: 150px;
-  left: 225px;
+  left: 30px;
   padding: 0.5em 0.75em;
+  width: 100px;
+  text-align: center;
   text-decoration: none;
   color: white;
   font-family: 'Dosis', sans-serif;
   background-color: #6FC000;
-  border-radius: 10px;
+  border-radius: 15px;
   background-image: linear-gradient(to bottom, #6FC000, #388200)
 }
 
@@ -157,14 +169,16 @@ footer {
 
 .btn-dung {
   position: absolute;
-  top: 350px;
-  left: 225px;
+  top: 150px;
+  left: 30px;
   padding: 0.5em 0.75em;
+  width: 100px;
+  text-align: center;
   text-decoration: none;
   color: white;
   font-family: 'Dosis', sans-serif;
   background-color: #6FC000;
-  border-radius: 10px;
+  border-radius: 15px;
   background-image: linear-gradient(to bottom, #6FC000, #388200)
 }
 
@@ -175,14 +189,16 @@ footer {
 
 .btn-tortoise {
   position: absolute;
-  top: 350px;
-  left: 40px;
+  top: 150px;
+  left: 30px;
   padding: 0.5em 0.75em;
+  width: 100px;
+  text-align: center;
   text-decoration: none;
   color: white;
   font-family: 'Dosis', sans-serif;
   background-color: #6FC000;
-  border-radius: 10px;
+  border-radius: 15px;
   background-image: linear-gradient(to bottom, #6FC000, #388200)
 }
 
